error en extension

--- a/AppTwo/templates/index.html
+++ b/AppTwo/templates/index.html
@@ -7,7 +7,7 @@
    <div class="jumbotron" >
     <h1>Pagina de inicio de sitios en Django</h1>
     <h2>Autor: Fernando Libedinsky
-    <a href="https://www.linkedin.com/in/fernandolibedinsky/"><img src="{% static "AppTwo/linkedin.pjpg" %}" alt="linkedin" target="_blank"></a></h2>
+    <a href="https://www.linkedin.com/in/fernandolibedinsky/"><img src="{% static "AppTwo/linkedin.jpg" %}" alt="linkedin" target="_blank"></a></h2>
 
     <p>Esta pagina solo tiene por objeto mostrar un sitio web construido con Django</p>
     </div>
