--- a/AppTwo/templates/index.html
+++ b/AppTwo/templates/index.html
@@ -9,7 +9,7 @@
     <h2>Autor: Fernando Libedinsky
     <a href="https://www.linkedin.com/in/fernandolibedinsky/"><img src="{% static "AppTwo/linkedin.jpg" %}" alt="linkedin" target="_blank"></a></h2>
 
-    <p>Esta pagina solo tiene por objeto mostrar un sitio web construido con Django Framework</p>
+    <p>Esta pagina solo tiene por objeto mostrar un sitio web construido con Django Framework y Python</p>
     </div>
 
 {% endblock %}
