--- a/AppTwo/templates/users.html
+++ b/AppTwo/templates/users.html
@@ -13,7 +13,6 @@
             <th >Last Name</th>
             <th >Email</th>
             <th >Action</th>
-
           </thead>
 
           {% for user in user_list %}
@@ -21,7 +20,7 @@
               <td>{{user.first_name}}</td>
               <td>{{user.last_name}}</td>
               <td>{{user.email}}</td>
-              <td><a class="btn btn-primary btn-sm" href="{% url 'views.edit' first_name=user.first_name last_name=user.last_name %}" role="button">Edit</a></td>
+              <td><a class="btn btn-primary btn-sm" href="{% url 'AppTwo:edit' first_name=user.first_name last_name=user.last_name %}" role="button">Edit</a></td>
 
           </tr>
           {% endfor %}
