se agrega un campo nuevo a la escuela

--- a/school/templates/school_detail.html
+++ b/school/templates/school_detail.html
@@ -8,6 +8,7 @@
        <li>Nombre: {{ school_detail.name }}</li>
        <li>Principal: {{ school_detail.principal }}</li>
        <li>Location: {{ school_detail.location }}</li>
+       <li>Region: {{ school_detail.region }}</li>
      </ul>
 
        <p><a class="btn btn-warning mt-3" href="{% url 'school:update' pk=school_detail.pk %}">Actualizar</a>
