--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,7 @@
     <p>Este sitio corresponde a dos aplicaciones construidas con Django Framework y Python</p>
     <p>Se utilizan dos bases de modelos de datos: clientes y escuelas</p>
     <p>Se utiliza el mecanismo de seguridad de Django para registrar y autentificar usuarios</p>
+    <p>Octubre, 2018</p>
 
   </div>
 
