cambios de diseño

--- a/school/templates/school_detail.html
+++ b/school/templates/school_detail.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block body_block %}
 
-   <h5>Escuela:</h5>
-   <div class="container pt-2 pb-4 pl-4" >
+   <h5 class="pt-3">Escuela:</h5>
+   <div class="container pt-3 pb-4 pl-4" >
 
      <ul class="list-group">
        <li>Nombre: {{ school_detail.name }}</li>
