--- a/AppTwo/templates/users.html
+++ b/AppTwo/templates/users.html
@@ -2,9 +2,9 @@
 {% extends "base.html" %}
 {% block body_block %}
 
-      <h2>Listado de Clientes</h2>
+      <h3 class="pt-3 pl-3">Listado de Clientes</h3>
 
-    <div class="container pt-5" >
+    <div class="container pt-3 " >
 
       {% if user_list %}
         <table class="table table-hover w-auto">
