--- a/school/templates/school_list.html
+++ b/school/templates/school_list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block body_block %}
 
-<h2>Listado de Escuelas</h4>
+<h2 class="pt-3">Listado de Escuelas</h4>
     <div class="container pt-3">
 
     <table class="table table-striped w-50">
