se agrega archivo de estilo global

--- a/school/templates/school_detail.html
+++ b/school/templates/school_detail.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block body_block %}
 
-   <h5 class="pt-3">Escuela:</h5>
+   <h5>Escuela:</h5>
    <div class="container pt-3 pb-4 pl-4" >
 
      <ul class="list-group">
