--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 {% extends "base.html" %}
 {% block body_block %}
 
-     <h3 class="pt-3 pl-3">Please Login here</h3>
+     <h3>Please Login here</h3>
 
      <div class="container pt-3 w-50 ml-4 " >
      <form class="form-group" action={% url 'user_login' %} method="post">
