--- a/AppTwo/templates/users.html
+++ b/AppTwo/templates/users.html
@@ -2,7 +2,7 @@
 {% extends "base.html" %}
 {% block body_block %}
 
-      <h3 class="pt-3 pl-3">Listado de Clientes</h3>
+  <h3 >Listado de Clientes</h3>
 
     <div class="container pt-3 " >
 
