--- a/templates/registration.html
+++ b/templates/registration.html
@@ -3,9 +3,9 @@
 {% block body_block %}
 
   {% if registered %}
-    <h3 class="pt-3 pl-3">Gracias por Registrarse! </h3>
+    <h3>Gracias por Registrarse! </h3>
   {% else %}
-     <h3 class="pl-3 pl-3" >Registrese aca! </h3>
+     <h3>Registrese aca! </h3>
 
      <div class="container w-50 m-4" >
      <form class="form-group" enctype="multipart/form-data" method="post">
