--- a/AppTwo/templates/users.html
+++ b/AppTwo/templates/users.html
@@ -20,7 +20,7 @@
               <td>{{user.first_name}}</td>
               <td>{{user.last_name}}</td>
               <td>{{user.email}}</td>
-              <td><a class="btn btn-primary btn-sm" href="{% url 'AppTwo:edit' first_name=user.first_name last_name=user.last_name %}" role="button">Edit</a></td>
+              <td><a class="btn btn-primary btn-sm" href="{% url 'AppTwo:edit' pk=user.pk %}" role="button">Edit</a></td>
 
           </tr>
           {% endfor %}
