--- a/templates/base.html
+++ b/templates/base.html
@@ -9,13 +9,13 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="{% url 'views.index' %}">BRAND</a>
+    <a class="navbar-brand" href="{% url 'views.index' %}">HOME</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav mr-auto ">
       <li class="nav-item active">
         <a class="nav-link" href="#">Empresa <span class="sr-only">(current)</span></a>
       </li>
@@ -33,20 +33,41 @@
           <a class="dropdown-item" href="{% url 'school:list' %}">Escuelas</a>
         </div>
       </li>
-      <li class="nav-item"><a class="nav-link" href="{% url 'views.register' %}">Registro</a></li>
-      {% if user.is_authenticated %}
-        <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
-      {% else %}
-        <li class="nav-item"><a class="nav-link" href="{% url 'user_login' %}">Login</a></li>
-
-      {% endif %}
-
-
     </ul>
+
+    <ul class="navbar-nav ml-auto pr-5">
+      <li class="nav-item dropdown">
+        {% if user.is_authenticated %}
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Perfil
+        </a>
+
+        </image>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="{% url 'user_detail' %}">Mi Perfil</a>
+          <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+         </div>
+
+        {% else %}
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Login
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="{% url 'user_login' %}">Ingrese con su Cuenta</a>
+          <a class="dropdown-item" href="{% url 'views.register' %}">Registrese aca</a>
+        </div>
+
+        {% endif %}
+      </li>
+    </ul>
+
+    <!--   buscador por ahora comentado
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
+  -->
+
     </div>
     </nav>
 
