--- a/templates/base.html
+++ b/templates/base.html
@@ -35,10 +35,17 @@
       </li>
     </ul>
 
+    <!--   buscador por ahora comentado -->
+    <form class="form-inline my-2 ml-5 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-success  my-2 my-sm-0 btn-sm" type="submit">Search</button>
+    </form>
+
+
     <ul class="navbar-nav ml-auto pr-5">
       <li class="nav-item dropdown">
         {% if user.is_authenticated %}
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle pr-5" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Perfil
         </a>
 
@@ -49,7 +56,7 @@
          </div>
 
         {% else %}
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle pr-5" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Login
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -61,12 +68,7 @@
       </li>
     </ul>
 
-    <!--   buscador por ahora comentado
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-  -->
+
 
     </div>
     </nav>
