--- a/AppTwo/templates/users.html
+++ b/AppTwo/templates/users.html
@@ -2,7 +2,8 @@
 {% extends "base.html" %}
 {% block body_block %}
 
-  <h3 >Listado de Clientes</h3>
+
+  <h3 class= "pl-2">Clientes <small class="text-muted pl-5 "><a class="btn btn-primary btn-sm" href="{% url 'AppTwo:edit' %}">Nuevo Cliente</a> </small></h3>
 
     <div class="container pt-3 " >
 
