--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load staticfiles %}
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
@@ -30,6 +31,10 @@
           <a class="dropdown-item" href="{% url 'AppTwo:users' %}">Clientes</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="{% url 'school:list' %}">Escuelas</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="{% url 'banco:list' %}">Banco - lista de clientes</a>
+          <a class="dropdown-item" href="{% url 'banco:query' %}">Banco - Query</a>
+
         </div>
       </li>
     </ul>
