--- a/security/templates/user_detail.html
+++ b/security/templates/user_detail.html
@@ -28,7 +28,7 @@
 
    <div class="container pt-3 pb-4 pl-4" >
 
-     <p><a class="btn btn-primary mt-3 btn-sm" href="{% url 'user_edit' %}">Editar</a>
+     <p><a class="btn btn-primary mt-3 btn-sm" href="{% url 'security:user_edit' %}">Editar</a>
      <a class="btn btn-warning mt-3 ml-4 btn-sm" href="#">Cambiar Password</a>
      </p>
 
