--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/static/style.css" >
+    <script src='https://www.google.com/recaptcha/api.js'></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -56,8 +57,8 @@
 
         </image>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="{% url 'user_detail' %}">Mi Perfil</a>
-          <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+          <a class="dropdown-item" href="{% url 'security:user_detail' %}">Mi Perfil</a>
+          <a class="dropdown-item" href="{% url 'security:logout' %}">Logout</a>
          </div>
 
         {% else %}
@@ -65,8 +66,8 @@
           Login
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="{% url 'user_login' %}">Ingrese con su Cuenta</a>
-          <a class="dropdown-item" href="{% url 'views.register' %}">Registrese aca</a>
+          <a class="dropdown-item" href="{% url 'security:user_login' %}">Ingrese con su Cuenta</a>
+          <a class="dropdown-item" href="{% url 'security:register' %}">Registrese aca</a>
         </div>
 
         {% endif %}
