Se agregan test de seguridad para usuarios autentificados. Se corrigue problema en login para en los casos de @login_required

--- a/security/templates/login.html
+++ b/security/templates/login.html
@@ -4,7 +4,7 @@
      <h3>Please Login here</h3>
 
      <div class="container pt-3 w-50 ml-4 " >
-     <form class="form-group" action={% url 'security:user_login' %} method="post">
+     <form class="form-group" action={% url 'security:user_login' %}?next={{next}} method="post">
        {% csrf_token %}
        <label class="form-control" for="username">Username:</label>
        <input class="form-control" type="text" name="username" placeholder="Enter username">
