Se agrega simulador de credito Hipotecario que incluye un formulario complejo para ingreso de datos

--- a/banco/templates/hipotecario.html
+++ b/banco/templates/hipotecario.html
@@ -64,6 +64,9 @@ $(document).ready(function(){
 
     $("#simular").click(function() {
 
+        // por ahora lo dejo inhabilitado
+        return;
+
         valor = parseInt($("#id_valor").val())
         credito = parseInt($("#id_credito").val())
         pie = parseInt($("#id_pie").val())
